# roumi

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: CI.yml
crates/data_preparation/: Cargo.toml  pyproject.toml
crates/data_preparation/benches/: dataset_bench.rs
crates/data_preparation/benches/imagenet/: pytorch_cpu.py  pytorch_cpu_gpu.py  rust_cpu.rs  rust_cpu_gpu.rs
crates/data_preparation/python_tests/: test_pyminibatch.py
crates/data_preparation/src/: collator.rs  dataset.rs  lib.rs  minibatch.rs  sample.rs  sampler.rs  transform.rs
crates/data_preparation/src/dataloader/: config.rs  loader.rs  mod.rs
crates/data_preparation/src/dataloader/common/: mod.rs  thread.rs
crates/data_preparation/src/dataloader/iterator/: inmemory.rs  iterable.rs  mod.rs
crates/data_preparation/src/dataloader/workers/: inmemory.rs  iterable.rs  mod.rs  pool.rs
crates/data_preparation/src/python/: minibatch.rs  mod.rs  tensor.rs
crates/data_preparation/src/readers/: image_dir.rs  jsonl.rs  mod.rs  parquet.rs  safetensors.rs  txt.rs
crates/data_preparation/src/transforms/: core.rs  mod.rs  multimodal.rs
crates/data_preparation/src/transforms/text/: mod.rs  ops.rs
crates/data_preparation/src/transforms/vision/: augmentation.rs  conversion.rs  geometric.rs  io.rs  mod.rs  ops.rs  photometric.rs
crates/data_preparation/tests/: dataloader_basic.rs  dataloader_seed.rs  dataloader_workers.rs
crates/data_preparation/tests/common/: mod.rs
crates/grpo_rewards/: Cargo.toml
crates/grpo_rewards/src/: lib.rs  main.rs  plugin_loader.rs  rewards.rs
examples/: example_grpo_rewards.py  using_plugin_rewards.py
grpo_rewards/: pyproject.toml
grpo_rewards/src/: lib.rs
plugins/template/: Cargo.toml
plugins/template/src/: lib.rs
