[workspace]
members = ["crates/*"]
resolver = "2"

exclude = [
    "plugins/*",
    # other plugins...
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = [ "Oumi Team <contact@oumi.ai>"]
license = "Apache-2.0"
repository = "https://github.com/oumi-ai/roumi"
description = "Rust libraries for Oumi"
