[package]
name = "data_preparation"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tch = "0.15.0"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
walkdir = "2"
arrow = "54.3.1"
parquet = { version = "54.3.1", features = ["arrow"] }
safetensors = "0.5.3"
bytemuck = "1.23.0"
image = "0.24"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3.0"

