[package]
name = "data_preparation"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "data_preparation"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = [] # Just an empty feature flag 

[dependencies]
tch = "0.15.0"
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
walkdir = "2"
arrow = "54.3.1"
parquet = { version = "54.3.1", features = ["arrow"] }
safetensors = "0.5.3"
bytemuck = "1.23.0"
image = "0.24"
rand = "0.9.1"
tokenizers = {version = "0.21", features = ["http"]}
crossbeam-channel = "0.5.15"
fast_image_resize = { version = "=5.1.4" }
sysinfo = "0.29"
num_cpus = "1.0"
chrono = "0.4.41"
hostname = "0.4.1"
nvml-wrapper = "0.11.0"
turbojpeg = "1.3.3"
pyo3 = {version = "=0.23.3", features = ["extension-module"]}
dlpackrs = "0.2.0"

[build-dependencies]
pyo3-build-config = "0.23.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.3.0"

[[bin]]
name = "benchmark_imagenet_rust_cpu"
path = "benches/imagenet/rust_cpu.rs"

[[bin]]
name = "benchmark_imagenet_rust_cpu_gpu"
path = "benches/imagenet/rust_cpu_gpu.rs"