[package]
name = "grpo_rewards_template_plugin"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "grpo_rewards_template_plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
grpo_rewards = { git = "ssh://git@github.com/oumi-ai/roumi.git", rev = "6c724fe140887c12a17c2954bbfd545c3b236f7f", package = "grpo_rewards" }

